# Python-Final-Project

./: .env.example  alembic.ini  main.py  mocked-text.json  pyproject.toml
api/: platform_controller.py  product_controller.py  regression_model_controller.py  scrape_controller.py  scraped_product_data_controller.py
common/: app_settings.py
common/services/: genai_service.py  regression_service.py  scrape_service.py
crud/: platform_repository.py  product_repository.py  regression_model_repository.py  scraped_product_data_repository.py
db/: __init__.py
genai/: __init__.py
models/: __init__.py  platform.py  product.py  regression_model.py  scraped_product_data.py
persistence/: env.py
persistence/versions/: 06803ccd22bc_init.py  7fac5a09ff0e_init.py
schemas/: platfrom_schema.py  product_schema.py  regression_model_schema.py  scrape_schema.py  scraped_product_data_schema.py
utils/bs4/: extract_product_data.py
utils/genai/: normalize_json.py
